--- a/spirit/leisure-names.sql.jinja2
+++ b/spirit/leisure-names.sql.jinja2
@@ -1,6 +1,6 @@
 SELECT
     ST_AsMVTGeom(point, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-    name,
+    names,
     way_area
   FROM leisure
   WHERE point && {{bbox}}
