--- a/shortbread/boundary_labels.sql.jinja2
+++ b/shortbread/boundary_labels.sql.jinja2
@@ -1,8 +1,6 @@
 SELECT
         ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-        name,
-        name_de,
-        name_en,
+        names,
         admin_level,
         way_area
     FROM boundary_labels
