--- a/shortbread/street_labels_points.sql.jinja2
+++ b/shortbread/street_labels_points.sql.jinja2
@@ -1,8 +1,6 @@
 SELECT
         ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-        name,
-        name_de,
-        name_en,
+        names,
         kind,
         ref
     FROM street_labels_points
