--- a/shortbread/streets_polygons_labels.sql.jinja2
+++ b/shortbread/streets_polygons_labels.sql.jinja2
@@ -1,8 +1,6 @@
 SELECT
         ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-        name,
-        name_de,
-        name_en,
+        names,
         kind
     FROM streets_polygons_labels
     WHERE geom && {{bbox}}
