--- a/shortbread/water_polygons_labels.sql.jinja2
+++ b/shortbread/water_polygons_labels.sql.jinja2
@@ -1,8 +1,6 @@
 SELECT
         ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-        name,
-        name_de,
-        name_en,
+        names,
         kind,
         way_area
     FROM water_area_labels
