--- a/shortbread_original/ferries.10-14.sql.jinja2
+++ b/shortbread_original/ferries.10-14.sql.jinja2
@@ -1,8 +1,6 @@
 SELECT
         ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-        name,
-        name_de,
-        name_en,
+        names,
         kind
     FROM ferries
     WHERE geom && {{bbox}}
