--- a/shortbread_original/water_lines_labels.12-14.sql.jinja2
+++ b/shortbread_original/water_lines_labels.12-14.sql.jinja2
@@ -1,7 +1,5 @@
 SELECT ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-        name,
-        name_de,
-        name_en,
+        names,
         kind,
         minzoom
     FROM water_lines_labels
