--- a/spirit/admin-names.sql.jinja2
+++ b/spirit/admin-names.sql.jinja2
@@ -1,6 +1,6 @@
 SELECT
     ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-    name,
+    names,
     way_area
   FROM admin
   WHERE geom && {{bbox}}
