--- a/spirit/vegetation-names.sql.jinja2
+++ b/spirit/vegetation-names.sql.jinja2
@@ -1,6 +1,6 @@
 SELECT
     ST_AsMVTGeom(geom, {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-    name,
+    names,
     vegetation,
     wetland,
     way_area
