--- a/spirit/water-lines.sql.jinja2
+++ b/spirit/water-lines.sql.jinja2
@@ -1,6 +1,6 @@
 SELECT
     ST_AsMVTGeom(ST_RemoveRepeatedPoints(ST_LineMerge(ST_Collect(geom)),  4*{{coordinate_length}}), {{unbuffered_bbox}}, {{extent}}, {{buffer}}) AS way,
-    name,
+    names,
     waterway
   FROM waterways
   WHERE geom && {{bbox}}
@@ -13,4 +13,4 @@ SELECT
 {% else %}
     AND waterway IN ('river', 'canal', 'stream', 'drain', 'ditch')
 {% endif %}
-  GROUP BY waterway, name
+  GROUP BY waterway, names
